--- a/src/scss/uikit.scss
+++ b/src/scss/uikit.scss
@@ -5,102 +5,7 @@
 //
 
 // base colour variables
-$theme_primary: #23259c; // solaris purple
-$theme_dark_primary: #0d0e27;
-$theme_very_dark_primary: #17161a;
-$theme_grey_primary: #454556; // solaris grey_purple
-$theme_secondary: #cebd9b; // solaris gold
-$theme_dark_secondary: #686058;
-$theme_green: #21897E;
-$theme_gold: #cebd9b; // solaris gold
-$theme_whatsapp_green: #25D366;
-$theme_orange: #faa05a;
-$theme_red: #ee3131;
-$theme_pink: #E63462;
-$theme_blue: #1a4ace;
-$theme_muted_pink: #fdefef;
-$theme_white: #fff;
-$theme_lightest_grey: #f8f8f8;
-$theme_lighter_grey: #f3f3f3;
-$theme_light_grey: #b4b4b4;
-$theme_grey: #afafaf;
-$theme_dark_grey: #999;
-$theme_darker_grey: #666;
-$theme_very_dark_grey: #333;
-$theme_blackest_grey: #1e1e1e;
-$theme_black: $theme_blackest_grey;
-$theme_true_black: #000;
-
-// font sizes
-$theme-base-font-size: 17px;
-
-// font weights. 100, 400, 600, 700  - current weights of google fonts
-$lighter_weight: 100;
-$light_weight: 100;
-$normal_weight: 400;
-$bold_weight: 600;
-$bolder_weight: 700;
-
-// fonts
-$theme_font: 'DM Sans', sans-serif;
-
-// 1. set the theme variables
-
-// borders
-$theme_border_color: #e5e5e5;
-$theme_border_accent_color: #e5e5e5;
-$theme_border_light_color: rgba($theme_white, .25);
-$theme_border: 1px solid $theme_border_color;
-$theme_border_thick: 2px solid $theme_border_color;
-$theme_border_light: 1px solid $theme_border_light_color;
-$theme_border_light_thick: 2px solid $theme_border_light_color;
-
-// shadows
-$navbar_dropdown_shadow: 0 5px 12px rgba(0,0,0,.15);
-
-// overlays
-$theme_primary_overlay: rgba($theme_primary, 0.8); // dark black strong
-$theme_faint_black_overlay: rgba($theme_true_black, 0.25); // very faint black
-$theme_medium_black_overlay: rgba($theme_black, 0.4); // black medium
-$theme_grey_primary_overlay: rgba($theme_grey_primary, 0.45); // purple overlay
-
-// *****theme vars actually used within imports
-
-// theme_primary
-// theme_black
-// theme_white
-// theme_light_grey
-// theme_lighter_grey
-// theme_dark_grey
-// theme_darker_grey
-// theme_grey_primary
-// theme_dark_primary
-
-// theme_faint_black_overlay
-// theme_medium_black_overlay
-// theme_grey_primary_overlay
-
-// theme_border
-// theme_border_light
-// theme_border_thick
-// theme_border_light_color
-
-// *****uikit vars actually used within imports
-
-// overlay-primary-background
-// overlay-default-background
-
-// global-secondary-background
-// global-emphasis-color
-// inverse-global-muted-color
-// inverse-global-color
-// inverse-global-border
-
-$container-max-width: 1090px;
-
-// global-medium-font-size
-
-// *****files actually using vars: backgrounds.scss, borders.scss, dark.scss & loaders.scss
+// $theme_primary: #23259c;
 
 //
 //
@@ -108,18 +13,9 @@ $container-max-width: 1090px;
 //
 //
 
-// // Uikit Offcanvas
+// Uikit Offcanvas
 // $offcanvas-bar-background: #fff;
 // $offcanvas-bar-color-mode: none;
-
-// $iconnav-item-color: #89839f; // icon colours
-// $icon-button-background: #f3edfb; // icon bg color
-// $base-heading-color: #5d5b68; // heading color
-// $text-emphasis-color: #5c5b68; // emphasis color
-// $base-body-color: #635f6a; // text color
-// $global-primary-background: #867edf; // button color
-// $global-link-color: #867edf; // button color
-// $global-muted-background: #ebe8fc; // muted bg color
 
 //
 //
