--- a/src/scss/uikit.scss
+++ b/src/scss/uikit.scss
@@ -47,7 +47,7 @@
 //
 
 // @import "theme/import-theme.scss"; // select components
-@import "theme/import-theme-all.scss"; // all
+// @import "theme/import-theme-all.scss"; // all
 
 //
 //
