--- a/src/scss/uikit.scss
+++ b/src/scss/uikit.scss
@@ -4,18 +4,15 @@
 //
 //
 
-// base colour variables
-// $theme_primary: #23259c;
-
 //
 //
 // 2. overwrite any of uikit's variables
 //
 //
 
-// Uikit Offcanvas
-// $offcanvas-bar-background: #fff;
-// $offcanvas-bar-color-mode: none;
+// // Uikit Offcanvas
+// $offcanvas-bar-background: #130e2b;
+// $offcanvas-bar-color-mode: light;
 
 //
 //
